--- a/pom.xml
+++ b/pom.xml
@@ -4,28 +4,38 @@
   <groupId>co.com.sofka</groupId>
   <artifactId>domain-driven-design</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0a</version>
   <name>ddd-generic-java</name>
   <url>http://maven.apache.org</url>
+ 
   <licenses>
-    <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+  <license>
+   <name>The Apache Software License, Version 2.0</name>
+   <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+  </license>
+ </licenses>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
+  <developers>
+    <developer>
+      <name>Raul A. Alzate</name>
+      <email>raul.alzate@sofka.com.co</email>
+      <organization>Sofka</organization>
+      <organizationUrl>http://www.sofka.com.co</organizationUrl>
+    </developer>
+  </developers>
 
+<scm>
+  <connection>scm:git:git://github.com/Sofka-XT/ddd-generic-java.git</connection>
+  <developerConnection>scm:git:ssh://github.com/Sofka-XT/ddd-generic-java</developerConnection>
+  <url>https://github.com/Sofka-XT/ddd-generic-java/tree/master</url>
+</scm>
+
+<distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
@@ -56,13 +66,26 @@
 
   </dependencies>
 
+
   <build>
     <plugins>
+      <plugin>
+      <groupId>org.sonatype.plugins</groupId>
+      <artifactId>nexus-staging-maven-plugin</artifactId>
+      <version>1.6.7</version>
+      <extensions>true</extensions>
+      <configuration>
+        <serverId>ossrh</serverId>
+        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+      </configuration>
+    </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
       </plugin>
     </plugins>
   </build>
+
 
 </project>
