--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>co.com.sofka</groupId>
   <artifactId>domain-driven-design</artifactId>
+  <description>Style project DDD as Sofka Make it</description>
   <packaging>jar</packaging>
   <version>0.1.0a</version>
   <name>ddd-generic-java</name>
-  <url>http://maven.apache.org</url>
+  <url>https://sofka.com.co</url>
  
   <licenses>
   <license>
@@ -20,7 +21,7 @@
       <name>Raul A. Alzate</name>
       <email>raul.alzate@sofka.com.co</email>
       <organization>Sofka</organization>
-      <organizationUrl>http://www.sofka.com.co</organizationUrl>
+      <organizationUrl>https://www.sofka.com.co</organizationUrl>
     </developer>
   </developers>
 
@@ -35,7 +36,12 @@
     <id>ossrh</id>
     <url>https://oss.sonatype.org/content/repositories/snapshots</url>
   </snapshotRepository>
+  <repository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  </repository>
 </distributionManagement>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
@@ -62,14 +68,29 @@
       <version>5.5.1</version>
       <scope>test</scope>
     </dependency>
-
-
   </dependencies>
-
 
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+      </plugin>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-gpg-plugin</artifactId>
+      <version>1.5</version>
+      <executions>
+        <execution>
+          <id>sign-artifacts</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>sign</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+    <plugin>
       <groupId>org.sonatype.plugins</groupId>
       <artifactId>nexus-staging-maven-plugin</artifactId>
       <version>1.6.7</version>
@@ -80,10 +101,6 @@
         <autoReleaseAfterClose>true</autoReleaseAfterClose>
       </configuration>
     </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
-      </plugin>
     </plugins>
   </build>
 
