--- a/co.com.sofka.business/pom.xml
+++ b/co.com.sofka.business/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>domain-driven-design</artifactId>
         <groupId>co.com.sofka</groupId>
-        <version>0.3.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>business</artifactId>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>co.com.sofka</groupId>
             <artifactId>domain</artifactId>
-            <version>0.3.0</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
