--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>domain-driven-design</artifactId>
   <description>Style project DDD as Sofka Make it</description>
   <packaging>pom</packaging>
-  <version>0.3.0</version>
+  <version>${revision}</version>
   <name>ddd-generic-java</name>
   <url>https://sofka.com.co</url>
   <licenses>
@@ -62,6 +62,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <revision>0.3.5</revision>
   </properties>
 
   <build>
