--- a/co.com.sofka.domain/pom.xml
+++ b/co.com.sofka.domain/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>domain-driven-design</artifactId>
         <groupId>co.com.sofka</groupId>
-        <version>${revision}</version>
+        <version>0.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
