quite a few changes of improvements and fixed.

--- a/co.com.sofka.application/pom.xml
+++ b/co.com.sofka.application/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>domain-driven-design</artifactId>
@@ -11,11 +11,11 @@
     <artifactId>application</artifactId>
     <packaging>jar</packaging>
     <dependencies>
-    <dependency>
-        <groupId>co.com.sofka</groupId>
-        <artifactId>infrastructure</artifactId>
-        <version>0.6.5</version>
-    </dependency>
+        <dependency>
+            <groupId>co.com.sofka</groupId>
+            <artifactId>infrastructure</artifactId>
+            <version>0.6.5</version>
+        </dependency>
         <dependency>
             <groupId>io.github.classgraph</groupId>
             <artifactId>classgraph</artifactId>
