--- a/co.com.sofka.application/pom.xml
+++ b/co.com.sofka.application/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>domain-driven-design</artifactId>
         <groupId>co.com.sofka</groupId>
-        <version>0.7.0</version>
+        <version>0.7.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>application</artifactId>
@@ -14,12 +14,18 @@
         <dependency>
             <groupId>co.com.sofka</groupId>
             <artifactId>infrastructure</artifactId>
-            <version>0.7.0</version>
+            <version>0.7.4</version>
         </dependency>
         <dependency>
             <groupId>io.github.classgraph</groupId>
             <artifactId>classgraph</artifactId>
             <version>4.8.78</version>
+        </dependency>
+        <dependency>
+            <groupId>co.com.sofka</groupId>
+            <artifactId>domain</artifactId>
+            <version>0.7.4</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
