--- a/co.com.sofka.business/pom.xml
+++ b/co.com.sofka.business/pom.xml
@@ -18,6 +18,12 @@
             <version>0.7.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
