--- a/co.com.sofka.application/pom.xml
+++ b/co.com.sofka.application/pom.xml
@@ -5,16 +5,18 @@
     <parent>
         <artifactId>domain-driven-design</artifactId>
         <groupId>co.com.sofka</groupId>
-        <version>0.7.6</version>
+        <version>1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>application</artifactId>
     <packaging>jar</packaging>
+    <version>${ddd.version}</version>
+
     <dependencies>
         <dependency>
             <groupId>co.com.sofka</groupId>
             <artifactId>infrastructure</artifactId>
-            <version>0.7.6</version>
+            <version>${ddd.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.classgraph</groupId>
@@ -24,7 +26,7 @@
         <dependency>
             <groupId>co.com.sofka</groupId>
             <artifactId>domain</artifactId>
-            <version>0.7.6</version>
+            <version>${ddd.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
