--- a/co.com.sofka.business/pom.xml
+++ b/co.com.sofka.business/pom.xml
@@ -5,17 +5,18 @@
     <parent>
         <artifactId>domain-driven-design</artifactId>
         <groupId>co.com.sofka</groupId>
-        <version>0.7.6</version>
+        <version>1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>business</artifactId>
     <packaging>jar</packaging>
+    <version>${ddd.version}</version>
 
     <dependencies>
         <dependency>
             <groupId>co.com.sofka</groupId>
             <artifactId>domain</artifactId>
-            <version>0.7.6</version>
+            <version>${ddd.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
