--- a/co.com.sofka.domain/pom.xml
+++ b/co.com.sofka.domain/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>domain-driven-design</artifactId>
         <groupId>co.com.sofka</groupId>
-        <version>0.7.6</version>
+        <version>1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>domain</artifactId>
     <packaging>jar</packaging>
-
+    <version>${ddd.version}</version>
 </project>
