--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>domain-driven-design</artifactId>
   <description>Style project DDD as Sofka Make it</description>
   <packaging>pom</packaging>
-  <version>0.7.6</version>
+  <version>1.5.0</version>
   <name>ddd-generic-java</name>
   <url>https://sofka.com.co</url>
   <licenses>
@@ -51,6 +51,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <ddd.version>1.5.0</ddd.version>
   </properties>
 
   <build>
